# flake8-aninymise

./: README.md  pyproject.toml  setup.cfg
flake8_anonymise/: example_tree.py  plugin.py
