[tool.poetry]
name = "flake8_anonymise"
version = "0.0.1"
description = "Плагин для gdpr_assist"
authors = ["Mazur Gleb"]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^4.0.1"
Django = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
